--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "engines": {
     "npm": "6.14.6",
-    "node": "16.13.0"
+    "node": "14.x"
   },
   "scripts": {
     "predeploy": "npm run build",
